--- a/estilo.css
+++ b/estilo.css
@@ -1,22 +1,22 @@
 body{
-    margin: 20px;
+    margin: 10px;
     font-family: sans-serif,arial;
     background-color:rgb(0, 0, 0);
 }
 
 header{
-    background-color: blueviolet;
+    background-color: hsl(0, 100%, 25%);
     border-style: inset;
     border-radius: 10px;
     border-width: 4px;
-    border-color: fuchsia;
+    border-color: hsl(0, 100%, 50%);
     text-align: center;
     position: relative;
     bottom: 10px;
 }
 h1{
-    text-shadow: 3px 3px 5px pink,-3px -3px 5px fuchsia;
-    color: aqua;
+    text-shadow: 3px 3px 5px rgb(112, 102, 104),-3px -3px 5px rgb(13, 6, 13);
+    color:white;
     text-align: center;
 }
 .linksnav ul{
@@ -27,7 +27,7 @@ h1{
     width: fit-content;
 }
 .linksnav a{
-    color: aqua;
+    color: hsl(0, 0%, 100%);
     text-decoration: none;
     padding: 10px;
     display: block;
@@ -46,17 +46,18 @@ h1{
 }
 
 footer{
-    background-color: blueviolet;
+    background-color: hsl(0, 100%, 25%);
     border-style: inset;
     border-radius: 10px;
     border-width: 4px;
-    border-color: fuchsia;
+    border-color: hsl(0, 100%, 50%);
     position: relative;
     top: 10px;
     text-align: center;
+    color: white;
 }
 .linksfinal a{
-    color: aqua;
+    color: hsl(181, 99%, 49%);
     text-decoration: none;
     padding: 0px;
 }
@@ -70,7 +71,7 @@ main{
     display: flow-root;
     border-style: solid;
     border-radius: 5px;
-    border-color: aquamarine;
+    border-color: hsl(180, 100%, 100%);
     color: white;
 }
 .corpo{
@@ -82,7 +83,7 @@ main{
     text-decoration: none;
 }
 .corpo a:hover{
-    color: aqua;
+    color: hsl(64, 100%, 50%);
 }
 
 #imagem{
