--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 body{
     margin: 10px;
     font-family: sans-serif,arial;
-    background-color:rgb(0, 0, 0);
+    background-color:hsl(0, 0%, 5%);
 }
 
 header{
@@ -69,9 +69,6 @@ main{
     margin-left: 20px;
     margin-right: 20px;
     display: flow-root;
-    border-style: solid;
-    border-radius: 5px;
-    border-color: hsl(180, 100%, 100%);
     color: white;
 }
 .corpo{
@@ -89,4 +86,51 @@ main{
 #imagem{
     float: left;
     margin: 10px;
+}
+
+@media screen and (max-widht:768px){
+body{
+    margin: 5px;
+}
+
+header{
+    bottom: 5px;
+}
+main{
+    margin-left: 5px;
+    margin-right:5px;
+}
+.corpo{
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+}
+
+#barbecuebody{
+    text-align: center;
+}
+.container{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+#responderBtn{
+    margin-top: 20px;
+    height: 30px;
+    width: 70px;
+    border-radius: 20px;
+}
+#imagemContainer{
+    margin-top: 20px;
+}
+#condimentoInput{
+    height: 30px;
+    width: 400px;
+    text-align: center;
+    font-size: medium;
+    border-radius: 10px;
+}
+.imagem-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
