--- a/estilo.css
+++ b/estilo.css
@@ -116,8 +116,9 @@ main{
 #responderBtn{
     margin-top: 20px;
     height: 30px;
-    width: 70px;
+    width: 80px;
     border-radius: 20px;
+    border: none;
 }
 #imagemContainer{
     margin-top: 20px;
@@ -128,9 +129,26 @@ main{
     text-align: center;
     font-size: medium;
     border-radius: 10px;
+    border: none;
 }
 .imagem-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.conversor{
+    color: white;
+    text-align: center;
+    background-color: #86A8DB;
+    margin: 30px;
+    border-radius: 50px;
+    padding: 20px;
+}
+#binary{
+    border-radius: 3px;
+    border: none;
+}
+#decimal{
+    border-radius: 3px;
+    border: none;
 }
