--- a/estilo.css
+++ b/estilo.css
@@ -134,3 +134,23 @@ main{
     flex-direction: column;
     align-items: center;
 }
+.conversor{
+    background-color: #86A8DB;
+    text-align: center;
+    padding: 40px;
+    margin-left: 1000px;
+    margin-right: 1000px;
+    border-radius: 50px;
+}
+#decimal{
+    height: 20px;
+    width: fit-content;
+    border: none;
+    border-radius: 10px;
+}
+#binary{
+    height: 20px;
+    width: fit-content;
+    border: none;
+    border-radius: 10px;
+}
