--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ header nav:hover > a:not(:hover) {
 .about h1 {
     font-size: 40px;
 }
-.about a {
+#linksmain a {
     color:hsl(185, 100%, 50%);
     text-decoration: none;
     font-size: 20px;
@@ -87,15 +87,9 @@ header nav:hover > a:not(:hover) {
     border-radius: 10px;
     margin-bottom: 10px;
 }
-.about a:hover {
+#linksmain a:hover {
     color:hsl(0, 0%, 100%);
     background-color: hsl(185, 100%, 50%);
-}
-.habilidades {
-    font-size: 1rem;
-    font-weight: 500;
-    text-align: center;
-    margin-top: 20px;
 }
 
 .imagens {
@@ -108,11 +102,11 @@ header nav:hover > a:not(:hover) {
 .imagens:hover {
     transform:scale(1.2);
     box-shadow: 2px 2px 2px hsl(185, 100%, 50%);
+    cursor: pointer;
 }
 footer { 
     padding: 10px;
-    display: flex;
     background-color: #86A8DB;
     color: white;
-    margin: 0 auto;
+    text-align: center;
 }
